example/lib/src/l10n/errors/app_bg.arb
{
  "@@locale": "bg",
  "error": "Възникна грешка",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Настъпи неочаквана грешка",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Баг репортът е изпратен успешно.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}